--- a/custom_components/tp_link_vlan_switcher/manifest.json
+++ b/custom_components/tp_link_vlan_switcher/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "documentation": "https://github.com/R0b1ns/TP-Link-Switch-HA-VLAN-Switcher",
   "requirements": ["requests"],
-  "codeowners": ["@yourgithub"],
+  "codeowners": ["@r0b1ns"],
   "iot_class": "local_polling",
   "config_flow": true
 }
