--- a/custom_components/tp_link_vlan_switcher/manifest.json
+++ b/custom_components/tp_link_vlan_switcher/manifest.json
@@ -6,5 +6,6 @@
   "requirements": ["requests"],
   "codeowners": ["@r0b1ns"],
   "iot_class": "local_polling",
-  "config_flow": true
+  "config_flow": true,
+  "platforms": ["button", "switch"]
 }
